src/test/ui/invalid/invalid-variadic-function.stderr
error: only foreign functions are allowed to be variadic
  --> $DIR/invalid-variadic-function.rs:1:26
   |
LL | extern "C" fn foo(x: u8, ...);
   |                          ^^^

error: expected one of `->`, `where`, or `{`, found `;`
  --> $DIR/invalid-variadic-function.rs:1:30
   |
LL | extern "C" fn foo(x: u8, ...);
   |                              ^ expected one of `->`, `where`, or `{` here

error: aborting due to 2 previous errors

